force-app/main/default/objects/SalesforceLimits__x/SalesforceLimits__x.object-meta.xml
<CustomObject>
    <description>Salesforce Limits</description>
    <externalDataSource>Salesforce_Limits</externalDataSource>
    <externalName>SalesforceLimits</externalName>
    <label>Salesforce Limit</label>
    <pluralLabel>Salesforce Limits</pluralLabel>
</CustomObject>