force-app/main/default/objects/SalesforceLimits__x/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <description>Max</description>
    <externalDeveloperName>Max</externalDeveloperName>
    <label>Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>