force-app/main/default/objects/SalesforceLimits__x/fields/Ratio__c.field-meta.xml
<CustomField>
    <fullName>Ratio__c</fullName>
    <description>Ratio</description>
    <externalDeveloperName>Ratio</externalDeveloperName>
    <label>Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>