force-app/main/default/objects/SalesforceLimits__x/fields/Remaining__c.field-meta.xml
<CustomField>
    <fullName>Remaining__c</fullName>
    <description>Remaining</description>
    <externalDeveloperName>Remaining</externalDeveloperName>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>