force-app/main/default/objects/SalesforceLimits__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>Max__c</columns>
    <columns>Ratio__c</columns>
    <columns>Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>